# terminalio

./: CMakeLists.txt
include/terminalio/: buffer.h  console.h  input.h  terminal.h
src/: buffer.cpp  console.cpp  debug.h  input.cpp  terminal.cpp
